src/theme/global.scss
html {
  font-size: 1.125em;
  height: 100%;
}

body {
  background-color: rgb(253, 253, 253);
  font-weight: 400;
  line-height: 1.45;
  font-family: 'Helvetica Neue', Helvetica, sans-serif;
  .wf-active & {
    font-family: 'Lato';
  }
  color: #4d4d4d;
  height: 100%;
  //Ugly hack. TODO: redo this
  & > div,
  & > div > div,
  & > div > div > div 
  { height: 100% }
}

p {margin-bottom: 1.3em;}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Helvetica Neue', Helvetica, serif;
  font-weight: inherit;
  line-height: 1.2;
  .wf-active & {
    font-family: 'Roboto Slab';
  }
}

h1, h2, h3, h4 {
  margin: 1.414em 0 0.5em;
}

h1 {
  margin-top: 0;
  font-size: 3.998em;
}

h2 {
  margin-top: 0;
  font-size: 2.827em;
}

h3 {font-size: 1.999em;}

h4 {font-size: 1.414em;}

h5 {font-size: 20px;}

h6 {font-size: 18px;}

a {
  color: #555;
  text-decoration: none;
  border-bottom: 1px solid rgba(100,100,100,0.3);
  &:hover,
  &:active,
  &:focus {
    color: #1c701b;
    border-color: #1c701b;
  }
}

.page-title {
  color: rgba(77, 77, 77, 0.65);
  line-height: 1;
}

